# SLOERSTUDIO-DEV

./: .editorconfig  .env.turbo.example  .gitattributes  .gitignore  .windsurfrules  CHANGELOG.md  CONTRIBUTING.md  ENV_SETUP.md  LICENSE  README.md  SECURITY.md  next.config.ts  package-lock.json  package.json  sentry.edge.config.ts  sentry.server.config.ts  turbo.json
.changeset/: README.md  config.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: changeset-release.yml  ci-desktop.yml  ci-voice.yml  ci-web.yml  release-desktop.yml  release-voice.yml
apps/desktop/: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  gen-icons.js  next.config.js  package-lock.json  package.json  tailwind.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/.cargo/: config.toml
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/voice/: .gitignore  README.md  index.html  optimize_logo.mjs  package-lock.json  package.json  square_logo.mjs  stress-test-widget.spec.ts  vite.config.ts  widget.html
apps/voice/src-tauri/: Cargo.toml  errors.txt  tauri.conf.json
apps/voice/src-tauri/capabilities/: default.json
apps/voice/src-tauri/icons/: icon.icns
apps/voice/src-tauri/src/: analytics.rs  db.rs  main.rs  metrics.rs  shortcuts.rs  sync_tests.rs  whisper.rs
apps/web/: dev.db  package.json
brand/guidelines/: BRAND.md
docs/architecture/: ADR.md  MONOREPO.md
docs/deployment/: DESKTOP.md  VOICE.md  WEB.md
infrastructure/docker/: Dockerfile.web  docker-compose.yml
infrastructure/nginx/: nginx.conf
messages/: en.json  es.json
prisma/: dev.db  schema.enterprise.prisma
scripts/: render-product-videos.ts  sentry-sourcemaps.sh
src/: instrumentation-client.ts  proxy.ts
src/app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
src/components/: AdminCharts.tsx  Footer.tsx  LocaleSwitcher.tsx  Navbar.tsx  PostHogProvider.tsx  SessionProvider.tsx
src/data/: blogPosts.ts
src/hooks/: useGsap.ts
src/i18n/: request.ts
src/lib/: auth.ts  blog.ts  env.ts  posthog.ts  prisma-edge.ts  prisma.ts  redis.ts
src/remotion/: CinematicProductMarketingVideo.tsx  PremiumProductMarketingVideo.tsx  ProductMarketingVideo.tsx  Root.tsx  productVideoConfigs.ts  (+1 more)
(+214 files in other folders)
