[package]
name = "sloervoice"
version = "1.0.0"
description = "SloerVoice — On-device Whisper AI voice dictation. Part of the SloerStudio platform."
authors = ["SloerStudio"]
license = "MIT"
repository = "https://github.com/sloerstudio/SLOERSTUDIO-DEV"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = ["tray-icon", "image-png"] }
tauri-plugin-log = "2"
rdev = "0.5.3"
enigo = "0.2.1"
cpal = "0.17.1"
tokio = { version = "1.50.0", features = ["full"] }
dirs = "6.0.0"
reqwest = { version = "0.12.0", features = ["stream", "rustls-tls"] }
whisper-rs = "0.11.1"
rusqlite = { version = "0.31.0", features = ["bundled"] }
tauri-plugin-single-instance = "2"
tauri-plugin-clipboard-manager = "2"
lazy_static = "1.5.0"
vader_sentiment = "0.1.1"
chrono = "0.4.44"
tauri-plugin-global-shortcut = "2.3.1"
regex-lite = "0.1"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation"] }
